:bug: Fix layout issues in game cards for better responsiveness

--- a/css/responsive/index.css
+++ b/css/responsive/index.css
@@ -22,6 +22,8 @@
 
     section:nth-of-type(2)>div div.game-card {
         margin-right: 50px;
+        margin-bottom: 10px;
+        height: calc(450 * 0.10vw);
     }
 
     section:nth-of-type(2)>div div.game-card>img {
